# svn-master

./: .gitmodules  Authorization.md  DistributedVersionControll.md  ExternalAndDump.md  GitSvnBridge.md  Hooks.md  Migrate.md  MigrateFromSvn.md  README.md  Readme.md  Rechte.md  Secrets.md
Azure/: .gitignore  CMakeLists.txt  Doc.md
Azure/TestPackage/: TestFile.md  main.cpp
